--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+ 
     <h1>Tytuł strony</h1>
     <p id="tekst"></p>
     <button id="dodaj">dodaj</button>
     <button id="usun">usun</button>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
